<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BDE MMI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Préférences</string>
    <string name="navigation_drawer_actu">Actualités</string>
    <string name="navigation_drawer_event">Événements</string>
    <string name="navigation_drawer_contact">Contact</string>
    <string name="navigation_drawer_settings">Préférences</string>
    <string name="notif_actu_checkbox">Notif\' Actu</string>
    <string name="notif_event_checkbox">Notif\' Event</string>
    <string name="item_image">Item image</string>
    <string name="contact_bde_title">Contacter le BDE !</string>
    <string name="double_back_toast">Appuyer de nouveau pour quitter</string>
    <string name="notifications_service_name">BDE MMI Notifications Service</string>
    <string name="notif_actu_title">Actualités du BDE MMI</string>
    <string name="notif_event_title">Événements du BDE MMI</string>
    <string name="notif_actu_ticker">%d nouvelles actualités !</string>
    <string name="notif_event_ticker">%d nouveaux évènements !</string>
    <string name="navigation_startup_checkbox">Ouvrir le menu au démarrage</string>
    <string name="navigation_drawer_gallery">Gallerie</string>

    <string-array name="event_spinner">
        <item>Prochainement</item>
        <item>Historique</item>
    </string-array>

</resources>
