<!--
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    style="@style/NavDrawerTheme"
    tools:context=".NavigationDrawerFragment" />
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navigation_drawer_scroll_view"
    style="@style/NavDrawerTheme"
    tools:context=".NavigationDrawerFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/read_actu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_actu"
            android:gravity="center"
            android:textSize="24sp"
            android:clickable="true"
            android:padding="10dp"
            android:background="@drawable/navigation_drawer_item"
            android:textColor="@color/navigation_drawer_text"
            />
        <TextView
            android:id="@+id/read_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_event"
            android:gravity="center"
            android:textSize="24sp"
            android:clickable="true"
            android:padding="10dp"
            android:background="@drawable/navigation_drawer_item"
            android:textColor="@color/navigation_drawer_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_contact"
            android:gravity="end"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="42dp"
            android:paddingBottom="0dp"
            android:textColor="@color/navigation_drawer_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigation_drawer_separator"
            android:minHeight="2dp"
            android:layout_marginBottom="10dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageButton
                android:id="@+id/menu_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/navigation_drawer_item"
                android:padding="10dp"
                android:layout_toLeftOf="@+id/menu_mail"
                android:src="@drawable/facebook"/>
            <ImageButton
                android:id="@+id/menu_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/navigation_drawer_item"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/mail"/>
            <ImageButton
                android:id="@+id/menu_firefox"
                android:layout_toRightOf="@id/menu_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/navigation_drawer_item"
                android:padding="10dp"
                android:src="@drawable/firefox"/>
            <ImageButton
                android:id="@+id/menu_instagram"
                android:layout_below="@id/menu_facebook"
                android:layout_alignLeft="@id/menu_facebook"
                android:layout_alignStart="@id/menu_facebook"
                android:layout_alignRight="@id/menu_facebook"
                android:layout_alignEnd="@id/menu_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/navigation_drawer_item"
                android:padding="10dp"
                android:src="@drawable/instagram"/>
            </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer_settings"
            android:gravity="end"
            android:textSize="24sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="0dp"
            android:textColor="@color/navigation_drawer_text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navigation_drawer_separator"
            android:minHeight="2dp"
            android:layout_marginBottom="10dp"
            />
        <CheckedTextView
            android:id="@+id/notif_actu_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notif_actu_checkbox"
            android:textColor="@color/navigation_drawer_text"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:background="@drawable/navigation_drawer_item"
            android:checked="true"
            />
        <CheckedTextView
            android:id="@+id/notif_event_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notif_event_checkbox"
            android:textColor="@color/navigation_drawer_text"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center"
            android:background="@drawable/navigation_drawer_item"
            android:checked="true"
            />
        </LinearLayout>

</ScrollView>
